--- a/contacts/src/main/resources/com/example/contacts/view.fxml
+++ b/contacts/src/main/resources/com/example/contacts/view.fxml
@@ -41,12 +41,12 @@
                <children>
                   <TableView layoutX="-1.0" layoutY="-5.0" prefHeight="488.0" prefWidth="630.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                        <TableColumn prefWidth="75.0" text="Column X" />
-                        <TableColumn prefWidth="75.0" text="Column X" />
-                        <TableColumn prefWidth="75.0" text="Column X" />
-                        <TableColumn prefWidth="253.99993896484375" text="Column X" />
+                      <TableColumn fx:id="photo" prefWidth="75.0" text="Photo" />
+                      <TableColumn fx:id="name" prefWidth="75.0" text="Name" />
+                        <TableColumn fx:id="department" prefWidth="75.0" text="Department" />
+                        <TableColumn fx:id="office" prefWidth="75.0" text="Office" />
+                        <TableColumn fx:id="title" prefWidth="75.0" text="Title" />
+                        <TableColumn fx:id="email" prefWidth="253.99993896484375" text="Email" />
                     </columns>
                   </TableView>
                </children>
