--- a/contacts/src/main/resources/com/example/contacts/view.fxml
+++ b/contacts/src/main/resources/com/example/contacts/view.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.contacts.Controller">
    <top>
       <HBox prefHeight="55.0" prefWidth="900.0" style="-fx-background-color: #003B93;" BorderPane.alignment="CENTER">
          <children>
@@ -57,21 +57,21 @@
                               <Insets right="15.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField prefHeight="26.0" prefWidth="267.0" />
+                        <TextField fx:id="keywordField" prefHeight="26.0" prefWidth="267.0" />
                      </children>
                   </HBox>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <TableView layoutX="-1.0" layoutY="-5.0" prefHeight="488.0" prefWidth="630.0">
+                  <TableView fx:id="table" layoutX="-1.0" layoutY="-5.0" prefHeight="488.0" prefWidth="630.0">
                     <columns>
-                      <TableColumn fx:id="photo" prefWidth="75.0" text="Photo" />
-                      <TableColumn fx:id="name" prefWidth="75.0" text="Name" />
-                        <TableColumn fx:id="department" prefWidth="75.0" text="Department" />
-                        <TableColumn fx:id="office" prefWidth="75.0" text="Office" />
-                        <TableColumn fx:id="title" prefWidth="75.0" text="Title" />
-                        <TableColumn fx:id="email" prefWidth="253.99993896484375" text="Email" />
+                      <TableColumn fx:id="photoColumn" prefWidth="75.0" text="Photo" />
+                      <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
+                        <TableColumn fx:id="departmentColumn" prefWidth="75.0" text="Department" />
+                        <TableColumn fx:id="officeColumn" prefWidth="75.0" text="Office" />
+                        <TableColumn fx:id="titleColumn" prefWidth="75.0" text="Title" />
+                        <TableColumn fx:id="emailColumn" prefWidth="253.99993896484375" text="Email" />
                     </columns>
                   </TableView>
                </children>
