--- a/uniteDeneme2/App/src/resources/announcement-view.fxml
+++ b/uniteDeneme2/App/src/resources/announcement-view.fxml
@@ -4,13 +4,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.image.ImageView?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <HBox prefHeight="55.0" prefWidth="900.0" style="-fx-background-color: #003B93;" BorderPane.alignment="CENTER">
@@ -23,9 +22,9 @@
                   <Insets left="10.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Label text="Contact" textFill="#fcf9f9">
+            <Label prefHeight="23.0" prefWidth="130.0" text="Announcements" textFill="#fcf9f9">
                <HBox.margin>
-                  <Insets left="375.0" top="15.0" />
+                  <Insets left="330.0" top="15.0" />
                </HBox.margin>
                <font>
                   <Font size="18.0" />
@@ -33,7 +32,7 @@
             </Label>
             <ImageView fitHeight="55.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
-                  <Insets left="345.0" />
+                  <Insets left="310.0" />
                </HBox.margin>
             </ImageView>
          </children></HBox>
@@ -43,12 +42,12 @@
          <children>
             <HBox prefHeight="41.0" prefWidth="760.0">
                <children>
-                  <Button mnemonicParsing="false" text="&lt;">
+                  <Button fx:id="backDate" mnemonicParsing="false" text="&lt;">
                      <HBox.margin>
                         <Insets left="250.0" />
                      </HBox.margin>
                   </Button>
-                  <Label text="Date">
+                  <Label fx:id="dateOfEvents" text="Date">
                      <HBox.margin>
                         <Insets left="100.0" right="100.0" top="5.0" />
                      </HBox.margin>
@@ -56,15 +55,52 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button mnemonicParsing="false" text="&gt;" />
+                  <Button fx:id="forwardDate" mnemonicParsing="false" text="&gt;" />
                </children>
             </HBox>
             <VBox prefHeight="420.0" prefWidth="760.0">
                <children>
-                  <ScrollPane prefHeight="193.0" prefWidth="760.0">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                    </content>
+                  <ScrollPane prefHeight="425.0" prefWidth="760.0">
+                     <content>
+                        <HBox prefHeight="80.0" prefWidth="758.0">
+                           <children>
+                              <VBox prefHeight="80.0" prefWidth="761.0">
+                                 <children>
+                                    <HBox prefHeight="100.0" prefWidth="200.0">
+                                       <children>
+                                          <Label fx:id="hourOfEvent" prefHeight="63.0" prefWidth="57.0" text="Saati">
+                                             <HBox.margin>
+                                                <Insets right="20.0" />
+                                             </HBox.margin>
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="nameOfEvent" prefHeight="63.0" prefWidth="710.0" text="Etkinlik adı">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font></Label>
+                                       </children>
+                                    </HBox>
+                                    <HBox prefHeight="29.0" prefWidth="758.0">
+                                       <children>
+                                          <Label fx:id="placeOfEvent" prefHeight="17.0" prefWidth="61.0" text="Yeri">
+                                             <padding>
+                                                <Insets right="20.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label fx:id="eventClub" prefHeight="17.0" prefWidth="422.0" text="Kulüp Adı">
+                                             <HBox.margin>
+                                                <Insets right="20.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </content>
                   </ScrollPane>
                </children>
             </VBox>
