--- a/uniteDeneme2/App/src/resources/askaqview.fxml
+++ b/uniteDeneme2/App/src/resources/askaqview.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -67,7 +68,10 @@
             </HBox>
             <HBox prefHeight="314.0" prefWidth="730.0">
                <children>
-                  <TextArea prefHeight="308.0" prefWidth="767.0" />
+                  <TextArea prefHeight="308.0" prefWidth="767.0" wrapText="true">
+                     <cursor>
+                        <Cursor fx:constant="SE_RESIZE" />
+                     </cursor></TextArea>
                </children>
             </HBox>
             <Label fx:id="charLimitText" text="Character Limit:  0/280">
