--- a/uniteDeneme2/App/src/resources/forumview.fxml
+++ b/uniteDeneme2/App/src/resources/forumview.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:controller="mainpack.deneme.ForumController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <HBox prefHeight="44.0" prefWidth="900.0" style="-fx-background-color: #003B93;" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Back">
+            <Button fx:id="backButton" mnemonicParsing="false" text="Back" onAction="#onBackButtonClick">
                <HBox.margin>
                   <Insets left="20.0" top="20.0" />
                </HBox.margin>
