--- a/uniteDeneme2/App/src/resources/announcement-view.fxml
+++ b/uniteDeneme2/App/src/resources/announcement-view.fxml
@@ -14,7 +14,7 @@
    <top>
       <HBox prefHeight="55.0" prefWidth="900.0" style="-fx-background-color: #003B93;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="backButton" mnemonicParsing="false" text="Back">
+            <Button fx:id="backButton" mnemonicParsing="false" text="Back" onAction="#onBackButtonClick">
                <font>
                   <Font size="14.0" />
                </font>
