Forum Entry Added

--- a/uniteDeneme2/App/src/resources/entry.fxml
+++ b/uniteDeneme2/App/src/resources/entry.fxml
@@ -7,21 +7,20 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox prefHeight="65.0" prefWidth="733.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:controller="mainpack.deneme.EntryItemController" prefHeight="65.0" prefWidth="733.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="72.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="entryImage" fitHeight="72.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url= null/>
          </image>
       </ImageView>
       <VBox prefHeight="72.0" prefWidth="597.0">
          <children>
-            <Label fx:id="userNameEntry" prefHeight="18.0" prefWidth="284.0" text="Atakan Akar ">
+            <Label fx:id="entryName" prefHeight="18.0" prefWidth="284.0" text="Atakan Akar ">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
             </Label>
-            <Label fx:id="textEntry" prefHeight="18.0" prefWidth="140.0" text="Atraba  Lazım" />
+            <Label fx:id="entryText" prefHeight="18.0" prefWidth="140.0" text="Atraba  Lazım" />
          </children>
          <HBox.margin>
             <Insets left="20.0" />
