--- a/uniteDeneme2/App/src/resources/forumview.fxml
+++ b/uniteDeneme2/App/src/resources/forumview.fxml
@@ -91,7 +91,7 @@
    <center>
       <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <content>
-            <VBox prefHeight="533.0" prefWidth="733.0">
+            <VBox fx:id="forumBox" prefHeight="533.0" prefWidth="733.0">
                <children>
                   <HBox prefHeight="65.0" prefWidth="733.0">
                      <children>
