--- a/uniteDeneme2/App/src/resources/responseview.fxml
+++ b/uniteDeneme2/App/src/resources/responseview.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:controller="mainpack.deneme.ResponseController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <GridPane prefHeight="67.0" prefWidth="900.0" style="-fx-background-color: #1A22A2;" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -42,7 +42,7 @@
                   <Insets left="700.0" />
                </GridPane.margin>
             </ImageView>
-            <Button mnemonicParsing="false" text="Back">
+            <Button fx:id="backButton" mnemonicParsing="false" text="Back" onAction="#onBackButtonClick">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin>
