--- a/uniteDeneme2/App/src/resources/response.fxml
+++ b/uniteDeneme2/App/src/resources/response.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="77.0" minHeight="77.0" prefHeight="77.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:controller="mainpack.deneme.ResponseItemController" maxHeight="77.0" minHeight="77.0" prefHeight="77.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="90.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
