Announcement view added

--- a/uniteDeneme2/App/src/resources/announcement-view.fxml
+++ b/uniteDeneme2/App/src/resources/announcement-view.fxml
@@ -64,7 +64,7 @@
                      <content>
                         <HBox prefHeight="80.0" prefWidth="758.0">
                            <children>
-                              <VBox prefHeight="80.0" prefWidth="761.0">
+                              <VBox fx:id="announcementBox" prefHeight="80.0" prefWidth="761.0">
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="200.0">
                                        <children>
