--- a/uniteDeneme2/App/src/resources/event.fxml
+++ b/uniteDeneme2/App/src/resources/event.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox prefHeight="80.0" prefWidth="758.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:controller="mainpack.deneme.EventItemController" prefHeight="80.0" prefWidth="758.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="80.0" prefWidth="761.0">
          <children>
