--- a/uniteDeneme2/App/src/resources/menu-view.fxml
+++ b/uniteDeneme2/App/src/resources/menu-view.fxml
@@ -69,7 +69,7 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="uploadMenuPhoto" mnemonicParsing="false" text="Upload Photo">
+            <Button fx:id="uploadMenuPhoto" mnemonicParsing="false" text="Upload Photo" onAction="#onUploadMenuButtonClick">
                <VBox.margin>
                   <Insets left="15.0" top="20.0" />
                </VBox.margin>
