--- a/uniteDeneme2/App/src/resources/responseview.fxml
+++ b/uniteDeneme2/App/src/resources/responseview.fxml
@@ -53,7 +53,7 @@
    <bottom>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <TextArea prefHeight="115.0" prefWidth="776.0" text="" />
+            <TextArea fx:id="textArea" prefHeight="115.0" prefWidth="776.0" text="" />
             <Button fx:id="responseSendButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="209.0" text="SEND">
                <VBox.margin>
                   <Insets left="350.0" top="30.0" />
