--- a/uniteDeneme2/App/src/resources/responseview.fxml
+++ b/uniteDeneme2/App/src/resources/responseview.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:controller="mainpack.deneme.ResponseController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpack.deneme.ResponseController">
    <top>
       <GridPane prefHeight="67.0" prefWidth="900.0" style="-fx-background-color: #1A22A2;" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -42,7 +42,7 @@
                   <Insets left="700.0" />
                </GridPane.margin>
             </ImageView>
-            <Button fx:id="backButton" mnemonicParsing="false" text="Back" onAction="#onBackButtonClick">
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin>
@@ -54,6 +54,11 @@
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <TextArea fx:id="textArea" prefHeight="115.0" prefWidth="776.0" text="" />
+            <Label fx:id="wordLimit" text="kelime limiti">
+               <VBox.margin>
+                  <Insets left="10.0" top="10.0" />
+               </VBox.margin>
+            </Label>
             <Button fx:id="responseSendButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="209.0" text="SEND">
                <VBox.margin>
                   <Insets left="350.0" top="30.0" />
